test/Dialect/LLZK_and_Builtin/bad_symref_type_param_fail.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics %s

// Several tests refer back to this:
//  NOTE: Cannot directly test the unknown symbol check in `verifySymbolUses()` for some ops
//  because the check producing "different type than prior uses" (which uses strict equality
//  rather than type unification) always occurs before `verifySymbolUses()` and there is no
//  (or at least shouldn't be a) way to create an SSA value with a symbol-parameterized type
//  using an unknown symbol due to sufficient `verifySymbolUses()` checks in all other ops.
//  We have tests for these to ensure no regression comes up in the future.

module attributes {veridise.lang = "llzk"} {
  // expected-error@+2 {{'function.def' op references unknown symbol "@Unknown"}}
  // expected-error@+1 {{could not find 'struct.def' named "@Unknown"}}
  function.def private @in_return_struct() -> !struct.type<@Unknown>
}
// -----
module attributes {veridise.lang = "llzk"} {
  // expected-error@+1 {{'function.def' op references unknown symbol "@Unknown"}}
  function.def private @in_return_array_of_scalar() -> !array.type<@Unknown x index>
}
// -----
module attributes {veridise.lang = "llzk"} {
  // expected-error@+2 {{'function.def' op references unknown symbol "@Unknown"}}
  // expected-error@+1 {{could not find 'struct.def' named "@Unknown"}}
  function.def private @in_return_array_of_struct() -> !array.type<2 x !struct.type<@Unknown>>
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @A<[@T]> {
    function.def @compute() -> !struct.type<@A<[@T]>> {
      %self = struct.new : !struct.type<@A<[@T]>>
      function.return %self : !struct.type<@A<[@T]>>
    }
    function.def @constrain(%self: !struct.type<@A<[@T]>>) { function.return }
  }

  // expected-error@+1 {{'function.def' op references unknown symbol "@Unknown"}}
  function.def private @in_return_deep() ->
    !array.type<2 x !struct.type<@A<[
      !array.type<2 x !struct.type<@A<[
        !struct.type<@A<[
          !array.type<2 x !struct.type<@A<[
            !struct.type<@A<[!poly.tvar<@Unknown>]>>
          ]>>>
        ]>>
      ]>>>
    ]>>>
}
// -----
module attributes {veridise.lang = "llzk"} {
  // expected-error@+2 {{'function.def' op references unknown symbol "@Unknown"}}
  // expected-error@+1 {{could not find 'struct.def' named "@Unknown"}}
  function.def private @in_arg_struct(!struct.type<@Unknown>) -> i1
}
// -----
module attributes {veridise.lang = "llzk"} {
  // expected-error@+1 {{'function.def' op references unknown symbol "@Unknown"}}
  function.def private @in_arg_array_of_scalar(!array.type<@Unknown x index>) -> i1
}
// -----
module attributes {veridise.lang = "llzk"} {
  // expected-error@+2 {{'function.def' op references unknown symbol "@Unknown"}}
  // expected-error@+1 {{could not find 'struct.def' named "@Unknown"}}
  function.def private @in_arg_array_of_struct(!array.type<2 x !struct.type<@Unknown>>) -> i1
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @A<[@T]> {
    function.def @compute() -> !struct.type<@A<[@T]>> {
      %self = struct.new : !struct.type<@A<[@T]>>
      function.return %self : !struct.type<@A<[@T]>>
    }
    function.def @constrain(%self: !struct.type<@A<[@T]>>) { function.return }
  }

  // expected-error@+1 {{'function.def' op references unknown symbol "@Unknown"}}
  function.def private @in_arg_deep(
    !array.type<2 x !struct.type<@A<[
      !struct.type<@A<[
        !array.type<2 x !struct.type<@A<[
          !array.type<2 x !struct.type<@A<[
            !struct.type<@A<[!poly.tvar<@Unknown>]>>
          ]>>>
        ]>>>
      ]>>
    ]>>>) -> i1

}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @InComputeReturnStruct<[@N]> {
    // expected-error@+1 {{'function.def' op references unknown symbol "@Unknown"}}
    function.def @compute() -> !struct.type<@InComputeReturnStruct<[@Unknown]>> {
      %self = struct.new : !struct.type<@InComputeReturnStruct<[@N]>>
      function.return %self : !struct.type<@InComputeReturnStruct<[@N]>>
    }
    function.def @constrain(%self: !struct.type<@InComputeReturnStruct<[@N]>>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @InComputeReturnArrayOfScalar<[@N]> {
    // expected-error@+1 {{'function.def' op references unknown symbol "@Unknown"}}
    function.def @compute() -> !struct.type<@InComputeReturnArrayOfScalar<[!array.type<@Unknown x i1>]>> {
      %self = struct.new : !struct.type<@InComputeReturnArrayOfScalar<[@N]>>
      function.return %self : !struct.type<@InComputeReturnArrayOfScalar<[@N]>>
    }
    function.def @constrain(%self: !struct.type<@InComputeReturnArrayOfScalar<[@N]>>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @InComputeReturnArrayOfStruct<[@N]> {
    // expected-error@+2 {{'function.def' op references unknown symbol "@Unknown"}}
    // expected-error@+1 {{could not find 'struct.def' named "@Unknown"}}
    function.def @compute() -> !struct.type<@InComputeReturnArrayOfStruct<[!array.type<1 x !struct.type<@Unknown>>]>> {
      %self = struct.new : !struct.type<@InComputeReturnArrayOfStruct<[@N]>>
      function.return %self : !struct.type<@InComputeReturnArrayOfStruct<[@N]>>
    }
    function.def @constrain(%self: !struct.type<@InComputeReturnArrayOfStruct<[@N]>>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @InComputeArgStruct {
    // expected-error@+2 {{'function.def' op references unknown symbol "@Unknown"}}
    // expected-error@+1 {{could not find 'struct.def' named "@Unknown"}}
    function.def @compute(%0: !struct.type<@Unknown>) -> !struct.type<@InComputeArgStruct> {
      %self = struct.new : !struct.type<@InComputeArgStruct>
      function.return %self : !struct.type<@InComputeArgStruct>
    }
    function.def @constrain(%self: !struct.type<@InComputeArgStruct>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @InComputeArgArrayOfScalar {
    // expected-error@+1 {{'function.def' op references unknown symbol "@Unknown"}}
    function.def @compute(%0: !array.type<@Unknown x index>) -> !struct.type<@InComputeArgArrayOfScalar> {
      %self = struct.new : !struct.type<@InComputeArgArrayOfScalar>
      function.return %self : !struct.type<@InComputeArgArrayOfScalar>
    }
    function.def @constrain(%self: !struct.type<@InComputeArgArrayOfScalar>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @InComputeArgArrayOfStruct {
    // expected-error@+2 {{'function.def' op references unknown symbol "@Unknown"}}
    // expected-error@+1 {{could not find 'struct.def' named "@Unknown"}}
    function.def @compute(%0: !array.type<2 x !struct.type<@Unknown>>) -> !struct.type<@InComputeArgArrayOfStruct> {
      %self = struct.new : !struct.type<@InComputeArgArrayOfStruct>
      function.return %self : !struct.type<@InComputeArgArrayOfStruct>
    }
    function.def @constrain(%self: !struct.type<@InComputeArgArrayOfStruct>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @InConstrainArgStruct {
    function.def @compute() -> !struct.type<@InConstrainArgStruct> {
      %self = struct.new : !struct.type<@InConstrainArgStruct>
      function.return %self : !struct.type<@InConstrainArgStruct>
    }
    // expected-error@+2 {{'function.def' op references unknown symbol "@Unknown"}}
    // expected-error@+1 {{could not find 'struct.def' named "@Unknown"}}
    function.def @constrain(%self: !struct.type<@InConstrainArgStruct>, %0: !struct.type<@Unknown>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @InConstrainArgArrayOfScalar {
    function.def @compute() -> !struct.type<@InConstrainArgArrayOfScalar> {
      %self = struct.new : !struct.type<@InConstrainArgArrayOfScalar>
      function.return %self : !struct.type<@InConstrainArgArrayOfScalar>
    }
    // expected-error@+1 {{'function.def' op references unknown symbol "@Unknown"}}
    function.def @constrain(%self: !struct.type<@InConstrainArgArrayOfScalar>, %0: !array.type<@Unknown x index>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @InConstrainArgArrayOfStruct {
    function.def @compute() -> !struct.type<@InConstrainArgArrayOfStruct> {
      %self = struct.new : !struct.type<@InConstrainArgArrayOfStruct>
      function.return %self : !struct.type<@InConstrainArgArrayOfStruct>
    }
    // expected-error@+2 {{'function.def' op references unknown symbol "@Unknown"}}
    // expected-error@+1 {{could not find 'struct.def' named "@Unknown"}}
    function.def @constrain(%self: !struct.type<@InConstrainArgArrayOfStruct>, %0: !array.type<2 x !struct.type<@Unknown>>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @InReturnOp {
    function.def @compute() -> !struct.type<@InReturnOp> {
      %self = struct.new : !struct.type<@InReturnOp> // expected-note {{prior use here}}
      // See NOTE on line 4.
      // expected-error@+1 {{use of value '%self' expects different type than prior uses: '!struct.type<@Unknown>' vs '!struct.type<@InReturnOp>'}}
      function.return %self : !struct.type<@Unknown>
    }
    function.def @constrain(%self: !struct.type<@InReturnOp>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @InReturnOpAndTypeAttr {
    function.def @compute() -> !struct.type<@InReturnOpAndTypeAttr> {
      %self = struct.new : !struct.type<@Unknown>
      // expected-error@+1 {{type of return operand 0 ('!struct.type<@Unknown>') doesn't match function result type ('!struct.type<@InReturnOpAndTypeAttr>') in function @compute}}
      function.return %self : !struct.type<@Unknown>
    }
    function.def @constrain(%self: !struct.type<@InReturnOpAndTypeAttr>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  function.def private @id(%a: !felt.type) -> !felt.type
  function.def @callop_unknown_in_return_type(%a: !felt.type) {
    // expected-error@+1 {{'function.call' op references unknown symbol "@Unknown"}}
    %sum = function.call @id(%a) : (!felt.type) -> (!poly.tvar<@Unknown>)
    function.return
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  function.def private @id(%a: !felt.type) -> !felt.type
  function.def @callop_unknown_in_return_type(%a: !felt.type) { // expected-note {{prior use here}}
    // See NOTE on line 4.
    // expected-error@+1 {{use of value '%a' expects different type than prior uses: '!poly.tvar<@Unknown>' vs '!felt.type'}}
    %sum = function.call @id(%a) : (!poly.tvar<@Unknown>) -> (!felt.type)
    function.return
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @InNewStruct {
    function.def @compute() -> !struct.type<@InNewStruct> {
      %self = struct.new : !struct.type<@InNewStruct>
      // expected-error@+2 {{'struct.new' op references unknown symbol "@Unknown"}}
      // expected-error@+1 {{could not find 'struct.def' named "@Unknown"}}
      %u = struct.new : !struct.type<@Unknown>
      function.return %self : !struct.type<@InNewStruct>
    }
    function.def @constrain(%self: !struct.type<@InNewStruct>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @InNewStructParam<[@A]> {
    function.def @compute() -> !struct.type<@InNewStructParam<[@A]>> {
      %self = struct.new : !struct.type<@InNewStructParam<[@A]>>
      // expected-error@+1 {{'struct.new' op references unknown symbol "@Unknown"}}
      %u = struct.new : !struct.type<@InNewStructParam<[@Unknown]>>
      function.return %self : !struct.type<@InNewStructParam<[@A]>>
    }
    function.def @constrain(%self: !struct.type<@InNewStructParam<[@A]>>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @InNewStructArrayParam<[@A]> {
    function.def @compute() -> !struct.type<@InNewStructArrayParam<[@A]>> {
      %self = struct.new : !struct.type<@InNewStructArrayParam<[@A]>>
      // expected-error@+1 {{'struct.new' op references unknown symbol "@Unknown"}}
      %u = struct.new : !struct.type<@InNewStructArrayParam<[!array.type<@Unknown x i1>]>>
      function.return %self : !struct.type<@InNewStructArrayParam<[@A]>>
    }
    function.def @constrain(%self: !struct.type<@InNewStructArrayParam<[@A]>>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @FieldDefOpWithUnknownScalarArray {
    // expected-error@+1 {{'struct.field' op references unknown symbol "@Unknown"}}
    struct.field @ret: !array.type<@Unknown x !felt.type>
    function.def @compute() -> !struct.type<@FieldDefOpWithUnknownScalarArray> {
      %self = struct.new : !struct.type<@FieldDefOpWithUnknownScalarArray>
      function.return %self : !struct.type<@FieldDefOpWithUnknownScalarArray>
    }
    function.def @constrain(%self: !struct.type<@FieldDefOpWithUnknownScalarArray>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @FieldDefOpWithUnknownTypeVar {
    // expected-error@+1 {{'struct.field' op references unknown symbol "@Unknown"}}
    struct.field @ret: !poly.tvar<@Unknown>
    function.def @compute() -> !struct.type<@FieldDefOpWithUnknownTypeVar> {
      %self = struct.new : !struct.type<@FieldDefOpWithUnknownTypeVar>
      function.return %self : !struct.type<@FieldDefOpWithUnknownTypeVar>
    }
    function.def @constrain(%self: !struct.type<@FieldDefOpWithUnknownTypeVar>) { function.return }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @ConstReadWithUnknown<[@T]> {
    function.def @compute() -> !struct.type<@ConstReadWithUnknown<[@T]>> {
      %self = struct.new : !struct.type<@ConstReadWithUnknown<[@T]>>
      function.return %self : !struct.type<@ConstReadWithUnknown<[@T]>>
    }
    function.def @constrain(%self: !struct.type<@ConstReadWithUnknown<[@T]>>) {
      // expected-error@+1 {{'poly.read_const' op references unknown symbol "@Unknown"}}
      %0 = poly.read_const @T : !poly.tvar<@Unknown>
      function.return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @FieldReadWithUnknownInBase<[@A]> {
    struct.field @f: !felt.type
    function.def @compute() -> !struct.type<@FieldReadWithUnknownInBase<[@A]>> {
      %self = struct.new : !struct.type<@FieldReadWithUnknownInBase<[@A]>>
      function.return %self : !struct.type<@FieldReadWithUnknownInBase<[@A]>>
    }
    function.def @constrain(%self: !struct.type<@FieldReadWithUnknownInBase<[@A]>>) { // expected-note {{prior use here}}
      // See NOTE on line 4.
      // expected-error@+1 {{use of value '%self' expects different type than prior uses: '!struct.type<@FieldReadWithUnknownInBase<[@Unknown]>>' vs '!struct.type<@FieldReadWithUnknownInBase<[@A]>>'}}
      %0 = struct.readf %self[@f] : !struct.type<@FieldReadWithUnknownInBase<[@Unknown]>>, !felt.type
      function.return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @FieldReadWithUnknownInResultTypeVar {
    struct.field @f: index
    function.def @compute() -> !struct.type<@FieldReadWithUnknownInResultTypeVar> {
      %self = struct.new : !struct.type<@FieldReadWithUnknownInResultTypeVar>
      function.return %self : !struct.type<@FieldReadWithUnknownInResultTypeVar>
    }
    function.def @constrain(%self: !struct.type<@FieldReadWithUnknownInResultTypeVar>) {
      // expected-error@+1 {{'struct.readf' op references unknown symbol "@Unknown"}}
      %0 = struct.readf %self[@f] : !struct.type<@FieldReadWithUnknownInResultTypeVar>, !poly.tvar<@Unknown>
      function.return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @FieldReadWithUnknownInResultArr<[@A]> {
    struct.field @f: !array.type<@A x i1>
    function.def @compute() -> !struct.type<@FieldReadWithUnknownInResultArr<[@A]>> {
      %self = struct.new : !struct.type<@FieldReadWithUnknownInResultArr<[@A]>>
      function.return %self : !struct.type<@FieldReadWithUnknownInResultArr<[@A]>>
    }
    function.def @constrain(%self: !struct.type<@FieldReadWithUnknownInResultArr<[@A]>>) {
      // expected-error@+1 {{'struct.readf' op references unknown symbol "@Unknown"}}
      %0 = struct.readf %self[@f] : !struct.type<@FieldReadWithUnknownInResultArr<[@A]>>, !array.type<@Unknown x i1>
      function.return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @FieldWriteWithUnknownInBase<[@A]> {
    struct.field @f: !felt.type
    function.def @compute(%0: i1) -> !struct.type<@FieldWriteWithUnknownInBase<[@A]>> {
      %self = struct.new : !struct.type<@FieldWriteWithUnknownInBase<[@A]>>
      function.return %self : !struct.type<@FieldWriteWithUnknownInBase<[@A]>>
    }
    function.def @constrain(%self: !struct.type<@FieldWriteWithUnknownInBase<[@A]>>, %0: i1) { // expected-note {{prior use here}}
      // See NOTE on line 4.
      // expected-error@+1 {{use of value '%self' expects different type than prior uses: '!struct.type<@FieldWriteWithUnknownInBase<[@Unknown]>>' vs '!struct.type<@FieldWriteWithUnknownInBase<[@A]>>'}}
      struct.writef %self[@f] = %0 : !struct.type<@FieldWriteWithUnknownInBase<[@Unknown]>>, i1
      function.return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @FieldWriteWithUnknownInRHSTypeVar<[@A]> {
    struct.field @f: !poly.tvar<@A>
    function.def @compute(
      %0: !poly.tvar<@A> // expected-note {{prior use here}}
    ) -> !struct.type<@FieldWriteWithUnknownInRHSTypeVar<[@A]>> {
      %self = struct.new : !struct.type<@FieldWriteWithUnknownInRHSTypeVar<[@A]>>
      // See NOTE on line 4.
      // expected-error@+1 {{use of value '%0' expects different type than prior uses: '!poly.tvar<@Unknown>' vs '!poly.tvar<@A>'}}
      struct.writef %self[@f] = %0 : !struct.type<@FieldWriteWithUnknownInRHSTypeVar<[@A]>>, !poly.tvar<@Unknown>
      function.return %self : !struct.type<@FieldWriteWithUnknownInRHSTypeVar<[@A]>>
    }
    function.def @constrain(%self: !struct.type<@FieldWriteWithUnknownInRHSTypeVar<[@A]>>) {
      function.return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @FieldWriteWithUnknownInRHSArr<[@A]> {
    struct.field @f: !array.type<@A x i1>
    function.def @compute(
      %0: !array.type<@A x i1> // expected-note {{prior use here}}
    ) -> !struct.type<@FieldWriteWithUnknownInRHSArr<[@A]>> {
      %self = struct.new : !struct.type<@FieldWriteWithUnknownInRHSArr<[@A]>>
      // See NOTE on line 4.
      // expected-error@+1 {{use of value '%0' expects different type than prior uses: '!array.type<@Unknown x i1>' vs '!array.type<@A x i1>'}}
      struct.writef %self[@f] = %0 : !struct.type<@FieldWriteWithUnknownInRHSArr<[@A]>>, !array.type<@Unknown x i1>
      function.return %self : !struct.type<@FieldWriteWithUnknownInRHSArr<[@A]>>
    }
    function.def @constrain(%self: !struct.type<@FieldWriteWithUnknownInRHSArr<[@A]>>) {
      function.return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  function.def @create_array_op_unknown() {
    // expected-error@+1 {{'array.new' op references unknown symbol "@Unknown"}}
    %arr = array.new : !array.type<@Unknown x !felt.type>
    function.return
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  function.def @ReadArrayOp_unknown_base(
    %arr: !array.type<5 x !felt.type>, // expected-note {{prior use here}}
    %k: index
  ) {
    // See NOTE on line 4.
    // expected-error@+1 {{use of value '%arr' expects different type than prior uses: '!array.type<@Unknown x !felt.type>' vs '!array.type<5 x !felt.type>'}}
    %v = array.read %arr[%k] : !array.type<@Unknown x !felt.type>, !felt.type
    function.return
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  function.def @ReadArrayOp_unknown_result_tvar(%arr: !array.type<5 x !felt.type>, %k: index) {
    // expected-error@+1 {{'array.read' op references unknown symbol "@Unknown"}}
    %v = array.read %arr[%k] : !array.type<5 x !felt.type>, !poly.tvar<@Unknown>
    function.return
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @ReadArrayOpWithUnknownInResultTypeArrElem<[@T]> {
    function.def @compute(%arr: !array.type<5 x !poly.tvar<@T>>) -> !struct.type<@ReadArrayOpWithUnknownInResultTypeArrElem<[@T]>> {
      %self = struct.new : !struct.type<@ReadArrayOpWithUnknownInResultTypeArrElem<[@T]>>
      function.return %self : !struct.type<@ReadArrayOpWithUnknownInResultTypeArrElem<[@T]>>
    }
    function.def @constrain(%self: !struct.type<@ReadArrayOpWithUnknownInResultTypeArrElem<[@T]>>, %arr: !array.type<5 x !poly.tvar<@T>>) {
      %k = arith.constant 0 : index
      // expected-error@+2 {{'array.read' op references unknown symbol "@Unknown"}}
      // expected-error@+1 {{could not find 'struct.def' named "@Unknown"}}
      %v = array.read %arr[%k] : !array.type<5 x !poly.tvar<@T>>, !struct.type<@Unknown>
      function.return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  function.def @WriteArrayOp_unknown_base(
      %arr: !array.type<5 x !felt.type>, // expected-note {{prior use here}}
      %k: index,
      %v: !felt.type
  ) {
    // See NOTE on line 4.
    // expected-error@+1 {{use of value '%arr' expects different type than prior uses: '!array.type<@Unknown x !felt.type>' vs '!array.type<5 x !felt.type>'}}
    array.write %arr[%k] = %v : !array.type<@Unknown x !felt.type>, !felt.type
    function.return
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  function.def @WriteArrayOp_unknown_result_tvar(
      %arr: !array.type<5 x !felt.type>,
      %k: index,
      %v: !felt.type // expected-note {{prior use here}}
  ) {
    // See NOTE on line 4.
    // expected-error@+1 {{use of value '%v' expects different type than prior uses: '!poly.tvar<@Unknown>' vs '!felt.type'}}
    array.write %arr[%k] = %v : !array.type<5 x !felt.type>, !poly.tvar<@Unknown>
    function.return
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @WriteArrayOpWithUnknownInResultTypeArrElem<[@T]> {
    function.def @compute(%arr: !array.type<5 x !poly.tvar<@T>>,
      %v: !struct.type<@T> // expected-note {{prior use here}}
    ) -> !struct.type<@WriteArrayOpWithUnknownInResultTypeArrElem<[@T]>> {
      %self = struct.new : !struct.type<@WriteArrayOpWithUnknownInResultTypeArrElem<[@T]>>
      %k = arith.constant 0 : index
      // See NOTE on line 4.
      // expected-error@+1 {{use of value '%v' expects different type than prior uses: '!struct.type<@Unknown>' vs '!struct.type<@T>'}}
      array.write %arr[%k] = %v : !array.type<5 x !poly.tvar<@T>>, !struct.type<@Unknown>
      function.return %self : !struct.type<@WriteArrayOpWithUnknownInResultTypeArrElem<[@T]>>
    }
    function.def @constrain(%self: !struct.type<@WriteArrayOpWithUnknownInResultTypeArrElem<[@T]>>,
        %arr: !array.type<5 x !poly.tvar<@T>>,
        %v: !struct.type<@T>
    ) {
      %k = arith.constant 0 : index
      function.return
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  function.def private @array_extract_with_unknown_base(
      %r: !array.type<2,2 x i1> // expected-note {{prior use here}}
  ) {
    // See NOTE on line 4.
    // expected-error@+1 {{use of value '%r' expects different type than prior uses: '!array.type<2,2 x !poly.tvar<@Unknown>>' vs '!array.type<2,2 x i1>'}}
    %s = array.extract %r[] : !array.type<2,2 x !poly.tvar<@Unknown>>
    function.return
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  function.def @array_len_with_unknown_base(
      %a: !array.type<2,3 x !felt.type>, // expected-note {{prior use here}}
      %0: index
  ) -> index {
    // See NOTE on line 4.
    // expected-error@+1 {{use of value '%a' expects different type than prior uses: '!array.type<2,@Unknown x !felt.type>' vs '!array.type<2,3 x !felt.type>'}}
    %x = array.len %a, %0 : !array.type<2,@Unknown x !felt.type>
    function.return %x: index
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @EmitEqOp_With_Unknown_In_LHS {
    function.def @constrain(%self: !struct.type<@EmitEqOp_With_Unknown_In_LHS>) {
      %a = array.new : !array.type<5 x !felt.type> // expected-note {{prior use here}}
      %b = array.new : !array.type<5 x !felt.type>
      // See NOTE on line 4.
      // expected-error@+1 {{use of value '%a' expects different type than prior uses: '!array.type<@Unknown x !felt.type>' vs '!array.type<5 x !felt.type>'}}
      constrain.eq %a, %b : !array.type<@Unknown x !felt.type>
      function.return
    }

    function.def @compute() -> !struct.type<@EmitEqOp_With_Unknown_In_LHS> {
      %self = struct.new : !struct.type<@EmitEqOp_With_Unknown_In_LHS>
      function.return %self : !struct.type<@EmitEqOp_With_Unknown_In_LHS>
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @EmitEqOp_With_Unknown_In_RHS {
    function.def @constrain(%self: !struct.type<@EmitEqOp_With_Unknown_In_RHS>) {
      %a = array.new : !array.type<5 x !felt.type>
      %b = array.new : !array.type<5 x !felt.type> // expected-note {{prior use here}}
      // See NOTE on line 4.
      // expected-error@+1 {{use of value '%b' expects different type than prior uses: '!array.type<@Unknown x !felt.type>' vs '!array.type<5 x !felt.type>'}}
      constrain.eq %a, %b : !array.type<5 x !felt.type>, !array.type<@Unknown x !felt.type>
      function.return
    }

    function.def @compute() -> !struct.type<@EmitEqOp_With_Unknown_In_RHS> {
      %self = struct.new : !struct.type<@EmitEqOp_With_Unknown_In_RHS>
      function.return %self : !struct.type<@EmitEqOp_With_Unknown_In_RHS>
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @EmitInOp_With_Unknown_In_LHS {
    function.def @constrain(%self: !struct.type<@EmitInOp_With_Unknown_In_LHS>) {
      %a = array.new : !array.type<5 x !felt.type> // expected-note {{prior use here}}
      %b = felt.const 3
      // See NOTE on line 4.
      // expected-error@+1 {{use of value '%a' expects different type than prior uses: '!array.type<@Unknown x !felt.type>' vs '!array.type<5 x !felt.type>'}}
      constrain.in %a, %b : !array.type<@Unknown x !felt.type>
      function.return
    }

    function.def @compute() -> !struct.type<@EmitInOp_With_Unknown_In_LHS> {
      %self = struct.new : !struct.type<@EmitInOp_With_Unknown_In_LHS>
      function.return %self : !struct.type<@EmitInOp_With_Unknown_In_LHS>
    }
  }
}
// -----
module attributes {veridise.lang = "llzk"} {
  struct.def @EmitInOp_With_Unknown_In_RHS {
    function.def @constrain(%self: !struct.type<@EmitInOp_With_Unknown_In_RHS>) {
      %a = array.new : !array.type<5 x !felt.type>
      %b = felt.const 3 // expected-note {{prior use here}}
      // See NOTE on line 4.
      // expected-error@+1 {{use of value '%b' expects different type than prior uses: '!poly.tvar<@Unknown>' vs '!felt.type'}}
      constrain.in %a, %b : !array.type<5 x !felt.type>, !poly.tvar<@Unknown>
      function.return
    }

    function.def @compute() -> !struct.type<@EmitInOp_With_Unknown_In_RHS> {
      %self = struct.new : !struct.type<@EmitInOp_With_Unknown_In_RHS>
      function.return %self : !struct.type<@EmitInOp_With_Unknown_In_RHS>
    }
  }
}
